# ragforge

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
chunker-rust/: Cargo.toml  Dockerfile
chunker-rust/src/: chunk.rs  lib.rs  main.rs
crawler-go/: Dockerfile  go.mod  main.go
crawler-go/corpus/: onboarding.md  pto.md
crawler-go/internal/config/: config.go
crawler-go/internal/pipeline/: pipeline.go
crawler-go/internal/watch/: watch.go  watch_test.go
dashboard-ts/: Dockerfile  next.config.js  package.json
dashboard-ts/app/: layout.tsx  page.tsx
docs/: ARCHITECTURE.md  architecture.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
engine-python/: Dockerfile  README.md  pyproject.toml
engine-python/ragforge_engine/: __init__.py  cli.py  corpus.py  embeddings.py  engine.py  evaluate.py  rag.py  real.py  service.py  store.py  text.py
engine-python/tests/: test_engine.py
proto/: protocol.md
scripts/: verify.py
