[package]
name = "ragforge_chunker"
version = "0.1.0"
edition = "2021"
description = "Semantic (topic-shift) text chunker for ragforge"
license = "MIT"

[[bin]]
name = "ragforge-chunker"
path = "src/main.rs"

[lib]
name = "ragforge_chunker"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
